www/iisnode/H-08864-9836-stderr-1529984549992.txt
Application has thrown an uncaught exception and is terminated:
D:\TFS\MESSERIES\iMES_Customer\6.0.3\iMES_YOKE\PDA_H5\APP\www\cordova.js:5
console.log(Hello world);//如果沒設定寫入權限在這行就會出錯
            ^^^^^

SyntaxError: missing ) after argument list
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Program Files\iisnode\interceptor.js:210:1)
